--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,9 +7,9 @@
     <p><%= paragraph %></p>
 
     <% posts.forEach(function(post) { %>
-    <h1><%=post.title%></h1>
-    <p><%=post.content%></p>
-    <a href="#">read...</a> 
+    <h1><%= post.title %></h1>
+    <p><%= post.content.substring(0, 30) + ' ...'%></p>
+    <a href="/posts/<%=post.title%>">read...</a> 
     <% }) %>
 
 
